# rustglhacks

./: .gitignore  README.md
gamekit/: Cargo.toml  README.adoc  build.rs
gamekit/assets/: shader.frag  shader.vert
gamekit/shaders/: shader.frag  shader.vert
gamekit/src/: entity.rs  exec.rs  main.rs
gamekit/src/graphics/: api.rs  application.rs  buffers.rs  gl.rs  graphics.rs  macros.rs  mod.rs  primitives.rs  program.rs  shader.rs  sprite.rs  sprite_batch.rs  std140.rs  texture.rs  types.rs  uniform.rs
