[package]
name = "gamekit"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
log = "0.4"
simplelog = "0.12.0"
png = "0.17.5"
sdl2 = "0.35.0"

# UNUSED
#gl = "0.14.0"
#cgmath = "0.18.0"

[build-dependencies]
gl_generator = "0.14.0"
